<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.classification.SelectImageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <!-- Back Button and Title -->
        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back"
                android:contentDescription="Back button"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_image"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Progress Bar -->
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/top_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Title Text -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/topText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/progressIndicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Preview Image -->
        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_upimage" />

        <!-- Camera Button -->
        <Button
            android:id="@+id/cameraButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/camera"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_camera"
            android:background="@drawable/button_shape"
            app:layout_constraintTop_toBottomOf="@id/previewImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/galleryButton" />

        <!-- Gallery Button -->
        <Button
            android:id="@+id/galleryButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/gallery"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_album"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_shape"
            app:layout_constraintTop_toBottomOf="@id/previewImageView"
            app:layout_constraintStart_toEndOf="@id/cameraButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Analyze Button -->
        <Button
            android:id="@+id/classifyButton"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/analyze"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:drawableLeft="@drawable/ic_scan2"
            android:drawablePadding="0dp"
            android:textColor="@color/white"
            android:background="@drawable/button_shape"
            app:layout_constraintTop_toBottomOf="@id/cameraButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
