<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    tools:context=".ui.output.OutputActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Back Button and Title -->
        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back"
                android:contentDescription="Back button"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Plant Image -->
        <ImageView
            android:id="@+id/plant_image"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            android:src="@drawable/plant_image"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/top_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Disease Label -->
        <TextView
            android:id="@+id/disease_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Disease Name"
            android:textSize="28sp"
            android:textColor="#4CAF50"
            android:textStyle="bold"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/plant_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Read More Button -->
        <Button
            android:id="@+id/read_more_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green2"
            android:text="@string/read_more"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/disease_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_history"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"/>

        <!-- Save History Button -->
        <Button
            android:id="@+id/btn_history"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green2"
            android:text="@string/save_history"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/disease_label"
            app:layout_constraintStart_toEndOf="@id/read_more_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginStart="16dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
